--- a/package.json
+++ b/package.json
@@ -14,10 +14,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@digitalbazaar/ed25519-verification-key-2020": "^4.2.0",
+    "@digitalbazaar/vc": "^7.2.0",
     "@veramo/core": "^6.0.0",
     "@veramo/data-store": "^6.0.0",
     "@veramo/did-manager": "^6.0.0",
+    "crypto-ld": "^7.0.0",
     "did-jwt-vc": "^4.0.15",
+    "ethers": "^6.14.3",
+    "jsonld": "^8.3.3",
     "web3": "^4.16.0"
   },
   "devDependencies": {
