--- a/package.json
+++ b/package.json
@@ -16,13 +16,18 @@
   "dependencies": {
     "@digitalbazaar/ed25519-verification-key-2020": "^4.2.0",
     "@digitalbazaar/vc": "^7.2.0",
+    "@semaphore-protocol/contracts": "^4.11.1",
     "@veramo/core": "^6.0.0",
     "@veramo/data-store": "^6.0.0",
     "@veramo/did-manager": "^6.0.0",
+    "circom": "^0.5.46",
+    "circom_runtime": "^0.1.28",
+    "circomlib": "^2.0.5",
     "crypto-ld": "^7.0.0",
     "did-jwt-vc": "^4.0.15",
     "ethers": "^6.14.3",
     "jsonld": "^8.3.3",
+    "snarkjs": "^0.7.5",
     "web3": "^4.16.0"
   },
   "devDependencies": {
